chore(infrastructure): Add shared utilities and ML core setup
- Add common utilities (logger, validators, redis client, config, decorators)
- Add ml_core infrastructure for ML/NLP capabilities
- Setup for all services (auth, job, resume parser, matching, etc.)
- Update pyproject.toml with all shared dependencies
- Configure Python path and environments

This infrastructure supports all phases

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,6 +53,7 @@ elasticsearch = "^9.2.0"
 isort = "^7.0.0"
 flake8 = "^7.3.0"
 mypy = "^1.18.2"
+scikit-learn = "^1.7.2"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.4"
