--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ readme = "README.md"
 package-mode = false
 
 [tool.poetry.dependencies]
-python = "^3.11"
+python = ">=3.11,<3.14"
 
 # FastAPI & Web Framework
 fastapi = "^0.115.0"
@@ -54,6 +54,29 @@ isort = "^7.0.0"
 flake8 = "^7.3.0"
 mypy = "^1.18.2"
 scikit-learn = "^1.7.2"
+hiredis = "^3.3.0"
+python-docx = "^1.2.0"
+pypdf2 = "^3.0.1"
+pypdf = "^6.1.3"
+pytesseract = "^0.3.13"
+pillow = "^12.0.0"
+spacy = "^3.8.8"
+pandas = "^2.3.3"
+plotly = "^6.4.0"
+pgvector = "^0.4.1"
+mlflow = "^3.6.0"
+wandb = "^0.22.3"
+langchain = "^1.0.5"
+langchain-openai = "^1.0.2"
+chromadb = "^1.3.4"
+ray = "^2.51.1"
+openai = "^2.7.1"
+requests = "^2.32.5"
+google-generativeai = "^0.8.5"
+google-genai = "^1.49.0"
+psutil = "^7.1.3"
+psycopg2-binary = "^2.9.11"
+python-socketio = "^5.14.3"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.4"
