--- a/pyproject.toml
+++ b/pyproject.toml
@@ -63,20 +63,22 @@ pillow = "^12.0.0"
 spacy = "^3.8.8"
 pandas = "^2.3.3"
 plotly = "^6.4.0"
-pgvector = "^0.4.1"
 mlflow = "^3.6.0"
 wandb = "^0.22.3"
 langchain = "^1.0.5"
 langchain-openai = "^1.0.2"
+langchain-anthropic = "^1.1.0"
+langgraph = "^1.0.3"
 chromadb = "^1.3.4"
-ray = "^2.51.1"
+ray = {version = "^2.51.1", extras = ["default"]}
 openai = "^2.7.1"
 requests = "^2.32.5"
-google-generativeai = "^0.8.5"
-google-genai = "^1.49.0"
 psutil = "^7.1.3"
 psycopg2-binary = "^2.9.11"
 python-socketio = "^5.14.3"
+status = "^0.2.5"
+redis-om = "^0.3.5"
+google-generativeai = "^0.8.5"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.4"
